fix post overflow fix for new_post

--- a/core/safeDash/safeDash.css
+++ b/core/safeDash/safeDash.css
@@ -125,10 +125,10 @@ body.MissingE_safeDash #posts li.notification blockquote[style] img:hover {
 opacity:1;
 }
 
-body.MissingE_safeDash #posts li.post {
+body.MissingE_safeDash #posts li.post:not(#new_post) {
 overflow:hidden;
-         padding-left:0 !important;
-         border-left:20px solid transparent !important;
+padding-left:0 !important;
+border-left:20px solid transparent !important;
 }
 
 body.MissingE_safeDash #posts li.post .post_content p {
